--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <span class="icon"><i class="fas fa-table"></i></span>
               <span>Data</span>
             </a>
-            
+
           <!-- prototypes -->
           <div class="navbar-item has-dropdown is-hoverable">
             <a class="navbar-link">
@@ -83,7 +83,7 @@
               Visualizations
             </a>
             <div class="navbar-dropdown">
-              <a class = "navbar-item" href = "final_visualization1.html" title = "Prototype 1">
+              <a class = "navbar-item" href = "visualization1.html" title = "Prototype 1">
                 <span class="icon"><i class="fas fa-paint-brush"></i></span>
                 <span>Visualization 1</span>
               </a>
