--- a/visualization1.html
+++ b/visualization1.html
@@ -56,19 +56,51 @@
             <span class="icon"><i class="fas fa-table"></i></span>
             <span>Data</span>
           </a>
-          <!-- Visualizations Icon -->
-          <a class = "navbar-item is-active" href = "visualization1.html" title = "Visualization 1">
-            <span class="icon"><i class="fas fa-paint-brush"></i></span>
-            <span>Visualization 1</span>
-          </a>
-          <a class = "navbar-item" href = "visualization2.html" title = "Visualization 2">
-            <span class="icon"><i class="fas fa-paint-brush"></i></span>
-            <span>Visualization 2</span>
-          </a>
-          <a class = "navbar-item" href = "visualization3.html" title = "Visualization 3">
-            <span class="icon"><i class="fas fa-paint-brush"></i></span>
-            <span>Visualization 3</span>
-          </a>
+
+          <!-- prototypes -->
+          <div class="navbar-item has-dropdown is-hoverable">
+            <a class="navbar-link">
+              Prototype
+            </a>
+            <div class="navbar-dropdown">
+              <a class = "navbar-item" href = "visualization1.html" title = "Prototype 1">
+                <span class="icon"><i class="fas fa-paint-brush"></i></span>
+                <span>Prototype 1</span>
+              </a>
+              <a class = "navbar-item" href = "visualization2.html" title = "Prototype 2">
+                <span class="icon"><i class="fas fa-paint-brush"></i></span>
+                <span>Prototype 2</span>
+              </a>
+              <a class = "navbar-item" href = "visualization3.html" title = "Prototype 3">
+                <span class="icon"><i class="fas fa-paint-brush"></i></span>
+                <span>Prototype 3</span>
+              </a>
+            </div>
+          </div>
+          <!-- Visualizations (D3) -->
+          <div class="navbar-item has-dropdown is-hoverable">
+            <a class="navbar-link">
+              Visualizations
+            </a>
+            <div class="navbar-dropdown">
+              <a class = "navbar-item" href = "visualization1.html" title = "Prototype 1">
+                <span class="icon"><i class="fas fa-paint-brush"></i></span>
+                <span>Visualization 1</span>
+              </a>
+              <a class = "navbar-item" href = "final_visualization2.html" title = "Visualization 2">
+                <span class="icon"><i class="fas fa-paint-brush"></i></span>
+                <span>Visualization 2</span>
+              </a>
+              <a class = "navbar-item" href = "final_visualization3.html" title = "Visualization 3">
+                <span class="icon"><i class="fas fa-paint-brush"></i></span>
+                <span>Visualization 3</span>
+              </a>
+            </div>
+          </div>
+
+
+
+
         </div>
 
         <!-- Right navbar items -->
