Navbar for dataset.html

--- a/dataset.html
+++ b/dataset.html
@@ -54,20 +54,46 @@
             <span class="icon"><i class="fas fa-table"></i></span>
             <span>Data</span>
           </a>
+
+          <div class="navbar-item has-dropdown is-hoverable">
+            <a class="navbar-link">
+              Prototype
+            </a>
+            <div class="navbar-dropdown">
+              <a class = "navbar-item" href = "visualization1.html" title = "Prototype 1">
+                <span class="icon"><i class="fas fa-paint-brush"></i></span>
+                <span>Prototype 1</span>
+              </a>
+              <a class = "navbar-item" href = "visualization2.html" title = "Prototype 2">
+                <span class="icon"><i class="fas fa-paint-brush"></i></span>
+                <span>Prototype 2</span>
+              </a>
+              <a class = "navbar-item" href = "visualization3.html" title = "Prototype 3">
+                <span class="icon"><i class="fas fa-paint-brush"></i></span>
+                <span>Prototype 3</span>
+              </a>
+            </div>
+          </div>
           <!-- Visualizations Icon -->
-          <a class = "navbar-item" href = "visualization1.html" title = "Visualization 1">
-            <span class="icon"><i class="fas fa-paint-brush"></i></span>
-            <span>Visualization 1</span>
-          </a>
-          <a class = "navbar-item" href = "visualization2.html" title = "Visualization 2">
-            <span class="icon"><i class="fas fa-paint-brush"></i></span>
-            <span>Visualization 2</span>
-          </a>
-          <a class = "navbar-item" href = "visualization3.html" title = "Visualization 3">
-            <span class="icon"><i class="fas fa-paint-brush"></i></span>
-            <span>Visualization 3</span>
-          </a>
-        </div>
+          <div class="navbar-item has-dropdown is-hoverable">
+            <a class="navbar-link">
+              Visualizations
+            </a>
+            <div class="navbar-dropdown">
+              <a class = "navbar-item" href = "visualization1.html" title = "Prototype 1">
+                <span class="icon"><i class="fas fa-paint-brush"></i></span>
+                <span>Visualization 1</span>
+              </a>
+              <a class = "navbar-item" href = "final_visualization2.html" title = "Visualization 2">
+                <span class="icon"><i class="fas fa-paint-brush"></i></span>
+                <span>Visualization 2</span>
+              </a>
+              <a class = "navbar-item" href = "final_visualization3.html" title = "Visualization 3">
+                <span class="icon"><i class="fas fa-paint-brush"></i></span>
+                <span>Visualization 3</span>
+              </a>
+            </div>
+          </div>
 
         <!-- Right navbar items -->
         <div class="navbar-end">
@@ -382,7 +408,7 @@
         </div>
       </div>
       <!-- End page content -->
-      
+
   </section>
 
   <!-- Page footer -->
