--- a/final_visualization1.html
+++ b/final_visualization1.html
@@ -83,7 +83,7 @@
               Visualizations
             </a>
             <div class="navbar-dropdown">
-              <a class = "navbar-item" href = "final_visualization1.html" title = "Prototype 1">
+              <a class = "navbar-item" href = "visualization1.html" title = "Prototype 1">
                 <span class="icon"><i class="fas fa-paint-brush"></i></span>
                 <span>Visualization 1</span>
               </a>
@@ -130,7 +130,15 @@
         <p> This prototype supports the theme of quality of the SF Fire Department responses.
           Even if none of the patients require Advance Life Support (ALS),
           ambulances that carry ALS resources show great safety precaution in the event where future patients
-          <i>do</i> need ALS. Such a safety precaution greatly increases overall quality of care.
+          <i>do</i> need ALS.
+          For instance, some ALS measures include tracheal intubation where paramedics
+          insert a tube into the trachea (windpipe) if a patient has difficulty breathing.
+          Another instance includes a paramedic performing Surgical cricothyrotomy (cutting through the skin
+          and the cricothyroid membrane of the trachea) so the patient  can breathe during
+          life-threatening situations such as airway obstruction, massive brain trauma, collapsed lung, etc.
+          All these life-saving techniques are far more advanced than basic life support (BLS).
+          That's why medical units that have ALS units are a fantastic safety precaution that
+          greatly increases overall quality of care.
         </p>
         <!-- <div class = "header" style="font-size: 12px;"> -->
         <h1>
