--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               Visualizations
             </a>
             <div class="navbar-dropdown">
-              <a class = "navbar-item" href = "visualization1.html" title = "Prototype 1">
+              <a class = "navbar-item" href = "final_visualization1.html" title = "Prototype 1">
                 <span class="icon"><i class="fas fa-paint-brush"></i></span>
                 <span>Visualization 1</span>
               </a>
