--- a/dataset.html
+++ b/dataset.html
@@ -80,7 +80,7 @@
               Visualizations
             </a>
             <div class="navbar-dropdown">
-              <a class = "navbar-item" href = "visualization1.html" title = "Prototype 1">
+              <a class = "navbar-item" href = "visualization1.html" title = "Visualization 1">
                 <span class="icon"><i class="fas fa-paint-brush"></i></span>
                 <span>Visualization 1</span>
               </a>
@@ -94,6 +94,7 @@
               </a>
             </div>
           </div>
+        </div>
 
         <!-- Right navbar items -->
         <div class="navbar-end">
