--- a/final_visualization1.html
+++ b/final_visualization1.html
@@ -83,7 +83,7 @@
               Visualizations
             </a>
             <div class="navbar-dropdown">
-              <a class = "navbar-item" href = "visualization1.html" title = "Prototype 1">
+              <a class = "navbar-item" href = "visualization1.html" title = "Visualization 1">
                 <span class="icon"><i class="fas fa-paint-brush"></i></span>
                 <span>Visualization 1</span>
               </a>
@@ -97,9 +97,6 @@
               </a>
             </div>
           </div>
-
-
-
 
         </div>
 
