--- a/index.html
+++ b/index.html
@@ -33,8 +33,6 @@
   <nav class="navbar is-light" role="navigation" aria-label="main navigation">
     <div class="container">
       <div class="navbar-brand">
-        <!-- TODO: Change link to repository homepage if needed -->
-        <!-- TODO: Change which navbar-item is-active if needed -->
         <a class="navbar-item is-active" href="index.html">
           <span class="icon"><i class="fas fa-home"></i></span>
           <span>Home</span>
@@ -59,20 +57,20 @@
           <!-- prototypes -->
           <div class="navbar-item has-dropdown is-hoverable">
             <a class="navbar-link">
-              Prototype
+              Prototypes
             </a>
             <div class="navbar-dropdown">
-              <a class = "navbar-item" href = "visualization1.html" title = "Prototype 1">
+              <a class = "navbar-item" href = "visualization1.html" title = "ALS Units">
                 <span class="icon"><i class="fas fa-paint-brush"></i></span>
-                <span>Prototype 1</span>
+                <span>ALS Units</span>
               </a>
-              <a class = "navbar-item" href = "visualization2.html" title = "Prototype 2">
+              <a class = "navbar-item" href = "visualization2.html" title = "Response Time">
                 <span class="icon"><i class="fas fa-paint-brush"></i></span>
-                <span>Prototype 2</span>
+                <span>Response Time</span>
               </a>
-              <a class = "navbar-item" href = "visualization3.html" title = "Prototype 3">
+              <a class = "navbar-item" href = "visualization3.html" title = "Number of Calls">
                 <span class="icon"><i class="fas fa-paint-brush"></i></span>
-                <span>Prototype 3</span>
+                <span>Number of Calls</span>
               </a>
             </div>
           </div>
@@ -83,17 +81,17 @@
               Visualizations
             </a>
             <div class="navbar-dropdown">
-              <a class = "navbar-item" href = "visualization1.html" title = "Prototype 1">
-                <span class="icon"><i class="fas fa-paint-brush"></i></span>
-                <span>Visualization 1</span>
+              <a class = "navbar-item" href = "visualization1.html" title = "ALS Units">
+                <span class="icon"><i class="fas fa-chart-bar"></i></span>
+                <span>ALS Units</span>
               </a>
-              <a class = "navbar-item" href = "final_visualization2.html" title = "Visualization 2">
-                <span class="icon"><i class="fas fa-paint-brush"></i></span>
-                <span>Visualization 2</span>
+              <a class = "navbar-item" href = "final_visualization2.html" title = "Response Time">
+                <span class="icon"><i class="fas fa-chart-bar"></i></span>
+                <span>Response Time</span>
               </a>
-              <a class = "navbar-item" href = "final_visualization3.html" title = "Visualization 3">
-                <span class="icon"><i class="fas fa-paint-brush"></i></span>
-                <span>Visualization 3</span>
+              <a class = "navbar-item" href = "number_of_calls.html" title = "Number of Calls">
+                <span class="icon"><i class="fas fa-chart-bar"></i></span>
+                <span>Number of Calls</span>
               </a>
             </div>
           </div>
@@ -101,7 +99,6 @@
 
         <!-- Right navbar items -->
         <div class="navbar-end">
-          <!-- TODO: Update as needed -->
           <a class="navbar-item" href="about.html" title="About">
             <span class="icon"><i class="fas fa-info-circle"></i></span>
             <span>About</span>
