modified heatmap and bar chart

--- a/final_visualization2.html
+++ b/final_visualization2.html
@@ -155,15 +155,14 @@
         </p>
 
         <!-- D3 version -->
-        <div id="heatmap"></div>
+        <svg id="heatmap"></div>
         <div id="nav-container">
           <div class="nav left">previous</div>
             <div id="locationDropdown"></div>
           <div class="nav right">next</div>
-          <div class="buttons"></div>
-          <br />  
+          <!-- <div class="buttons"></div> -->
         </div>
-        <div id='barcharts'></div>
+        <svg id='barcharts'></div>
 
         <script src="heatmap_kai.js"></script>
       </div>
