--- a/visualization2.html
+++ b/visualization2.html
@@ -42,7 +42,7 @@
   <!-- End page header -->
   
 
-  !-- Page navigation -->
+  <!-- Page navigation --> -->
   <!-- https://bulma.io/documentation/components/navbar/ -->
   <nav class="navbar is-light" role="navigation" aria-label="main navigation">
     <div class="container">
