--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
               Visualizations
             </a>
             <div class="navbar-dropdown">
-              <a class = "navbar-item" href = "final_visualization1.html" title = "Prototype 1">
-                <span class="icon"><i class="fas fa-paint-brush"></i></span>
-                <span>Visualization 1</span>
+              <a class = "navbar-item" href = "final_visualization1.html" title = "ALS Units">
+                <span class="icon"><i class="fas fa-chart-bar"></i></span>
+                <span>ALS Units</span>
               </a>
               <a class = "navbar-item" href = "final_visualization2.html" title = "Response Time">
                 <span class="icon"><i class="fas fa-chart-bar"></i></span>
@@ -124,7 +124,6 @@
         <p>Learn more about the dataset on our <a href="dataset.html">data page</a>.
           <br>
           Learn more about our team on our <a href="about.html">about page.</a>
-          <br> Learn more about our visualizations on our <a href = "visualizations.html"> visualizations page. </a>
         </p>
       </div>
       <!-- End page content -->
