--- a/visualization1.html
+++ b/visualization1.html
@@ -34,8 +34,6 @@
   <nav class="navbar is-light" role="navigation" aria-label="main navigation">
     <div class="container">
       <div class="navbar-brand">
-        <!-- TODO: Change link to repository homepage if needed -->
-        <!-- TODO: Change which navbar-item is-active if needed -->
         <a class="navbar-item" href="index.html">
           <span class="icon"><i class="fas fa-home"></i></span>
           <span>Home</span>
@@ -49,64 +47,59 @@
       </div>
 
       <div id="main-menu" class="navbar-menu has-text-weight-medium">
-        <!-- Left navbar items -->
-        <div class="navbar-start">
-          <!-- The data icon -->
-          <a class="navbar-item" href="dataset.html" title="Data">
-            <span class="icon"><i class="fas fa-table"></i></span>
-            <span>Data</span>
-          </a>
+          <!-- Left navbar items -->
+          <div class="navbar-start">
+            <!-- The data icon -->
+            <a class="navbar-item" href="dataset.html" title="Data">
+              <span class="icon"><i class="fas fa-table"></i></span>
+              <span>Data</span>
+            </a>
 
           <!-- prototypes -->
           <div class="navbar-item has-dropdown is-hoverable">
             <a class="navbar-link">
-              Prototype
+              Prototypes
             </a>
             <div class="navbar-dropdown">
-              <a class = "navbar-item" href = "visualization1.html" title = "Prototype 1">
+              <a class = "navbar-item is-active" href = "visualization1.html" title = "ALS Units">
                 <span class="icon"><i class="fas fa-paint-brush"></i></span>
-                <span>Prototype 1</span>
+                <span>ALS Units</span>
               </a>
-              <a class = "navbar-item" href = "visualization2.html" title = "Prototype 2">
+              <a class = "navbar-item" href = "visualization2.html" title = "Response Time">
                 <span class="icon"><i class="fas fa-paint-brush"></i></span>
-                <span>Prototype 2</span>
+                <span>Response Time</span>
               </a>
-              <a class = "navbar-item" href = "visualization3.html" title = "Prototype 3">
+              <a class = "navbar-item" href = "visualization3.html" title = "Number of Calls">
                 <span class="icon"><i class="fas fa-paint-brush"></i></span>
-                <span>Prototype 3</span>
+                <span>Number of Calls</span>
               </a>
             </div>
           </div>
-          <!-- Visualizations (D3) -->
+
+          <!-- visualizations -->
           <div class="navbar-item has-dropdown is-hoverable">
             <a class="navbar-link">
               Visualizations
             </a>
             <div class="navbar-dropdown">
-              <a class = "navbar-item" href = "final_visualization1.html" title = "Prototype 1">
-                <span class="icon"><i class="fas fa-paint-brush"></i></span>
-                <span>Visualization 1</span>
+              <a class = "navbar-item" href = "final_visualization1.html" title = "ALS Units">
+                <span class="icon"><i class="fas fa-chart-bar"></i></span>
+                <span>ALS Units</span>
               </a>
-              <a class = "navbar-item" href = "final_visualization2.html" title = "Visualization 2">
-                <span class="icon"><i class="fas fa-paint-brush"></i></span>
-                <span>Visualization 2</span>
+              <a class = "navbar-item" href = "final_visualization2.html" title = "Response Time">
+                <span class="icon"><i class="fas fa-chart-bar"></i></span>
+                <span>Response Time</span>
               </a>
-              <a class = "navbar-item" href = "final_visualization3.html" title = "Visualization 3">
-                <span class="icon"><i class="fas fa-paint-brush"></i></span>
-                <span>Visualization 3</span>
+              <a class = "navbar-item" href = "number_of_calls.html" title = "Number of Calls">
+                <span class="icon"><i class="fas fa-chart-bar"></i></span>
+                <span>Number of Calls</span>
               </a>
             </div>
           </div>
-
-
-
-
         </div>
 
         <!-- Right navbar items -->
         <div class="navbar-end">
-          <!-- TODO: Update as needed -->
-          <!-- About Icon -->
           <a class="navbar-item" href="about.html" title="About">
             <span class="icon"><i class="fas fa-info-circle"></i></span>
             <span>About</span>
