Tried to graph bars

--- a/visualization1.html
+++ b/visualization1.html
@@ -97,10 +97,6 @@
               </a>
             </div>
           </div>
-
-
-
-
         </div>
 
         <!-- Right navbar items -->
@@ -155,12 +151,17 @@
         Neighborhood, whether the cases had ALS resources, and the number of cases. </p>
       <br />
 
+      <h4> Feedback </h4>
+      <p> Many people argued that having an ALS unit does not
+        mean a better quality service. In the final visualization, I
+        defended why having an ALS unit on dispatch units increased quality of calls.
 
-      <h4>D3</h4>
+      </p>
+      <!-- <h4>D3</h4> -->
 
 
-      <script src = "stackedBarALS.js"></script>
-      <svg id = "stackedBar"> </svg>
+      <!-- <script src = "stackedBarALS.js"></script> -->
+      <!-- <svg id = "stackedBar"> </svg> -->
       </div>
       <!-- End page content -->
     </div>
