--- a/final_visualization1.html
+++ b/final_visualization1.html
@@ -119,12 +119,12 @@
       <!-- Begin page content -->
       <div class="content">
         <h1 class="title">
-          Prototype 1
+          Visualization 1: ALS Unit
         </h1>
 
         <h4>Artist: Justine Huynh</h4>
-        <img src = "ALS_Support(J).png" height = 940 width = 900>
-        <p> This prototype supports the theme of quality of the SF Fire Department responses.
+        <!-- <img src = "ALS_Support(J).png" height = 940 width = 900> -->
+        <p> This D3 visualization supports the theme of quality of the SF Fire Department responses.
           Even if none of the patients require Advance Life Support (ALS),
           ambulances that carry ALS resources show great safety precaution in the event where future patients
           <i>do</i> need ALS.
@@ -158,7 +158,14 @@
         <h4> Planned Interactivity</h4>
         <p> When the mouse hovers over the bar, users can see a nice table of 3 values:
         Neighborhood, whether the cases had ALS resources, and the number of cases. </p>
-      <br />
+      <br/>
+
+      <h4> How To Read Stacked Bar Chart </h4>
+        <p> The length of the bars indicate the number of calls. The yellow bars
+          mean the dispatch units did not have ALS unit. Red indicates that the dispatch
+          units did have ALS units. X-axis lists the neighborhoods, Y-axis lists <thead>
+            number of calls.
+          </thead>
 
 
       <h4>D3</h4>
