Added prototype feedback

--- a/visualization3.html
+++ b/visualization3.html
@@ -113,7 +113,7 @@
       <!-- Begin page content -->
       <div class="content">
         <h1 class="title">
-          Prototype 3
+          Number of Calls Prototype
         </h1>
 
       <h4>Artist: Ahmed Kaddoura</h4>
@@ -133,6 +133,15 @@
       <p> On mouse over of a section of the heatmap, a details on demand table will appear that shows the call type group, neighberhood name,
         and exact value for the number of calls made for that neighborhood and call type. In addition, when a section of the heatmap is selected,
         the corresponding section will be highlighted on the response time heatmap.
+      </p>
+      <h4> Feedback </h4>
+      <p> Several of my peers gave me feedback about the null column in my heatmap. The feedback said that I should either get rid of the null column,
+        or standarize the use of a null column with the other heatmap visualization in my group. After consulting with Kai, I decided to get rid of the
+        null column in my final visualization, becasue it was very few outlier columns that were missing a call type group. Another feedback I recieved
+        was to right allign the name of the neighberhoods so they would be directly next to the data which they are labeling. I did this in my final
+        visualization and it makes it more clear which neighberhood the data is for. Finally, I recieved the feedback to further data wrangle so that I
+        actually visualize the number of calls and not just the number of records. I did this data wrangling in Tableau and it significantly changed my data
+        and made the visualization more accurate because now I am actually visualizing the number of calls.
       </p>
       </div>
       <!-- End page content -->
