--- a/final_visualization1.html
+++ b/final_visualization1.html
@@ -151,17 +151,21 @@
 
         <!-- </div> -->
 
-        <h4> Planned Interactivity</h4>
+        <!-- <h4> Planned Interactivity</h4>
         <p> When the mouse hovers over the bar, users can see a nice table of 3 values:
         Neighborhood, whether the cases had ALS resources, and the number of cases. </p>
-      <br/>
+      <br/> -->
 
       <h4> How To Read Stacked Bar Chart </h4>
         <p> The length of the bars indicate the number of calls. The yellow bars
           mean the dispatch units did not have ALS unit. Red indicates that the dispatch
           units did have ALS units. X-axis lists the neighborhoods, Y-axis lists <thead>
             number of calls.
-          </thead>
+          </p>
+          <br>
+      <h4> Interactivity </h4>
+      <p>When the mouse hovers over the bar, users can see a nice table of 3
+        values: Neighborhood, whether the cases had ALS resources, and the number of cases. </p>
 
 
       <h4>D3</h4>
@@ -169,6 +173,20 @@
 
       <script src = "stackedBarALS.js"></script>
       <svg id = "stackedBar"> </svg>
+
+      <h4> Findings </h4>
+      <p> Tenderloin has both the highest number of dispatch units with ALS units
+        and dispatch units without ALS units. Presidio has the smallest number of
+        cases, indicating this neighborhood is either relatively safe or does not
+        call the Fire Department often.
+        </p>
+
+    <h4> Inspiration</h4>
+    Special thanks to these websites for their help!
+    <br>
+    <a href = "https://observablehq.com/@d3/stacked-bar-chart">https://observablehq.com/@d3/stacked-bar-chart</a>
+    <br>
+    <a href = "https://bl.ocks.org/LemoNode/5a64865728c6059ed89388b5f83d6b67"> https://bl.ocks.org/LemoNode/5a64865728c6059ed89388b5f83d6b67</a>
       </div>
       <!-- End page content -->
     </div>
