--- a/number_of_calls.html
+++ b/number_of_calls.html
@@ -116,23 +116,37 @@
       <!-- Begin page content -->
       <div class="content">
 
-      <h4>Artist: Ahmed Kaddoura</h4>
+      <h3>Artist: Ahmed Kaddoura</h4>
 
       <svg id="vis"></svg>
       <script src="number_of_calls.js"></script>
 
-      <h4> Interactivity</h4>
-      <p> On mouse over of a section of the heatmap, a details on demand table will appear that shows the call type group, neighberhood name,
-        and exact value for the number of calls made for that neighborhood and call type. In addition, when a section of the heatmap is selected,
-        the corresponding section will be highlighted on the response time heatmap.
+      <h4>Data Encoding</h4>
+      <p> This is a heatmap which encodes the number of calls made to the SF Fire Department from each neighberhood and call type group. An orange
+        color scale is used, and the darker orange a cell is, the more calls of that type were made from that San Francisco neighberhood.
       </p>
-      <h4>Data Wrangling</h4>
-      <p> This visualization uses the <a href = "FireDepartmentCallsSelected.csv"> FireDepartmentCallsSelected.csv </a> data which filtered the original
-        dataset down to calls made in San Francisco in 2019. I further created a sum of the number of rows for each neighborhood and call type group. This
-        sum is represented by the color in the heatmap.
+      <h4>Interactivity</h4>
+      <p> To interact with the visualization, hover your mouse over a cell in the heatmap. When you hover over a cell, a details on demand table
+        will appear that shows the call type group, neighberhood name, and exact value for the number of calls made for that neighborhood and call
+        type. In addition, hovering over a specific cell will highlight it in the heatmap with a grey outline so you know which cell the
+        tooltip corresponds to.
       </p>
-      <h4> Prototype improvements</h4>
-      <p> Removed null column. Data wrangled number of rows to number of calls. Right alligned neighborhood label.
+      <h4>Findings</h4>
+      <p>A finding that can be learned from this visualization is that in all San Francisco neighberhoods, more non-lfe threatening and potentially
+        life-threatening calls are made to the fire department than alarm and fire calls. This finding contributes to our theme by helping contextualize
+        the response time and quality of response for each neighberhood. While the number of calls from each neighberhood is correlated with the
+        number of people living in each neighberhood, this visualization can be used along with the response time visualization to get a better picture
+        of the different needs each neighberhood has from the fire department. For example, while the South of Market and Tenderloin neighberhoods make
+        significantly more calls to the fire department for non-lfe threatening and potentially life-threatening than they do for alarms, the Financial
+        District/South Beach neighberhood makes a number of alarm calls that is much closer to the number of non-lfe threatening and potentially
+        life-threatening calls.
+      </p>
+      <h4>Inspiration</h4>
+      <p> The functionanlity of this heatmap was inspired by <a  href="https://blockbuilder.org/sjengle/47c5c20a18ec29f4e2b82905bdb7fe95"> this heatmap visualization</a> by Sophie Engle.
+      <br>
+        The interactivity of this heatmap was inspired by <a href="https://observablehq.com/@sjengle/interactivity?collection=@sjengle/interactive-scatterplot"> this example</a> by Sophie Engle.
+      <br>
+        The color legend of this heatmap is inspired by <a href="https://bl.ocks.org/mbostock/1086421"> this linear gradient example</a> by Mike Bostock.
       </p>
       </div>
       <!-- End page content -->
